discussion/kv_engine/177009/177009_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Rename writeDocument to upsert

And let it be a member function to the MeteringTest class to avoid
the need of passing the connection.

Change-Id: Ice8415efd3c911a8ededa55eaa78ff51a6e6a598

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 08:00:18.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 10:02:18.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47302/ : FAILURE

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp_serverless/metering_test.cc(1202): error: Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[  FAILED  ] MeteringTest.MeterGetRandomKey (2 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47302/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18542/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:30:20: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
            conn = cluster->getConnection(0);
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:102:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:151:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:261:30: error: no member named "this_thread" in namespace "std" [clang-diagnostic-error]
                        std::this_thread::sleep_for(
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:688:23: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto connection = cluster->getConnection(0);
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:876:19: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto bucket = cluster->getBucket("metering");
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11: error: unknown type name "size_t" [clang-diagnostic-error]
constexpr size_t MaxConnectionsPerBucket = 16;
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:23:8: error: use of undeclared identifier "std" [clang-diagnostic-error]
extern std::unique_ptr<cb::test::Cluster> cluster;
       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18542/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:30:20:
error: use of undeclared identifier "cluster" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18542/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28807/ : FAILURE

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
[2022-07-03T08:35:41.301Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master@3/kv_engine/tests/testapp_serverless/metering_test.cc:1202: Failure
[2022-07-03T08:35:41.301Z] Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[2022-07-03T08:35:41.301Z] [  FAILED  ] MeteringTest.MeterGetRandomKey (4 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28807/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20426/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20426/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19648/ : FAILURE

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
[2022-07-03T09:48:38.622Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp_serverless/metering_test.cc:1202: Failure
[2022-07-03T09:48:38.622Z] Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[2022-07-03T09:48:38.622Z] [  FAILED  ] MeteringTest.MeterGetRandomKey (5 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19648/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8213/ : FAILURE

Compile error at [2022-07-03T08:47:45.065Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp_serverless/dcp_drain.cc:187:9:
error: use of undeclared identifier "EXPECT_TRUE"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8213/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8312/ : FAILURE

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
[2022-07-03T09:00:28.497Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/tests/testapp_serverless/metering_test.cc:1202: Failure
[2022-07-03T09:00:28.497Z] Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[2022-07-03T09:00:28.497Z] [  FAILED  ] MeteringTest.MeterGetRandomKey (1 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8312/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20774/ : FAILURE

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
[2022-07-03T09:19:12.871Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/tests/testapp_serverless/metering_test.cc:1202: Failure
[2022-07-03T09:19:12.871Z] Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[2022-07-03T09:19:12.871Z] [  FAILED  ] MeteringTest.MeterGetRandomKey (2 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20774/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21414/ : FAILURE

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
[2022-07-03T09:37:00.798Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp_serverless/metering_test.cc:1202: Failure
[2022-07-03T09:37:00.798Z] Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[2022-07-03T09:37:00.798Z] [  FAILED  ] MeteringTest.MeterGetRandomKey (15 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21414/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17693/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39754/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
